--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,13 @@
     }
 }
 
+@media screen and (max-width: 400px) {
+    .exploreProduct {
+        margin: 0px;
+        border-bottom: none;
+    }
+}
+
 .buttonsection1{
     background:#07122e;
     color: #326add;
